<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:id="@+id/text_view_account_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/your_account_details"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_view_full_name"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/mr_fullname_user" />

    <TextView
        android:id="@+id/text_view_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/email_adress_com" />

    <TextView
        android:id="@+id/text_view_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/_48_792_123_456" />

</LinearLayout>